Supported deleting and inserting. Added button.

--- a/tests/manual/suggestionmode.html
+++ b/tests/manual/suggestionmode.html
@@ -1,5 +1,17 @@
 <head>
 	<link rel="stylesheet" href="%APPS_DIR%ckeditor/build/amd/theme/ckeditor.css">
+	<style>
+		.ck-editor__editable ins {
+			text-decoration: none;
+			border-bottom: solid 2px green;
+			color: green;
+		}
+		.ck-editor__editable del {
+			text-decoration: none;
+			border-bottom: solid 2px red;
+			color: red;
+		}
+	</style>
 </head>
 
 <div id="editor">
