--- a/tests/manual/autocomplete.html
+++ b/tests/manual/autocomplete.html
@@ -8,8 +8,7 @@
 </p>
 
 <div id="editor">
-	<h2>Hello world!</h2>
-	<p>This is an editor instance.</p>
+	<h2>Autocomplete</h2>
 </div>
 
 <div style="height: 1000px"></div>
