--- a/tests/table-of-contents/tableofcontents.html
+++ b/tests/table-of-contents/tableofcontents.html
@@ -116,5 +116,5 @@
 </div>
 <div id="right-sidebar">
 	<h1>Table of contents</h1>
-	<div id="table-of-contents"></div>
+	<div id="table-of-contents" contenteditable="true"></div>
 </div>
