Selective Undo highlightning.

--- a/tests/manual/selectiveundo.html
+++ b/tests/manual/selectiveundo.html
@@ -21,6 +21,18 @@
 		.ck-editor__selective-undo__item:hover {
 			background: #FCFCAA;
 		}
+
+		.selective-undo-range {
+			background-color: #79C4FF;
+		}
+
+		.selective-undo-pointer {
+			display: inline-block;
+			width: 2px;
+			margin-left: -1px;
+			margin-right: -1px;
+			background-color: #057DFF;
+		}
 	</style>
 </head>
 
